--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8082
+  port: 8083
   servlet:
-    context-path: /pagamento
+    context-path: /auth
 
 spring:
   application:
-    name: crud
+    name: auth
   jpa:
     show-sql: false
     hibernate:
@@ -17,22 +17,12 @@ spring:
   jmx:
     enabled: false
   datasource:
-    url: jdbc:mysql://localhost:3308/pagamento?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3308/auth?allowPublicKeyRetrieval=true&sslMode=DISABLED&useSSL=false&serverTimezone=UTC
     username: microservices
     password: microservices123
-    
-  rabbitmq:
-    host: localhost 
-    port: 5672
-    username: admin
-    password: admin 
-        
-crud:
-  rabbitmq:
-    exchange: crud.exchange
-    queue: crud.produto.queue
 
 security:
   jwt:
-    token: 
+    token:
       secret-key: my_microservices_key
+      expire-lenth: 360000
