--- a/crud/src/main/resources/application.yml
+++ b/crud/src/main/resources/application.yml
@@ -31,3 +31,8 @@ crud:
   rabbitmq:
     exchange: crud.exchange
     routingkey: crud.produto.routingkey
+
+security:
+  jwt:
+    token: 
+      secret-key: my_microservices_key
