--- a/auth/src/main/resources/application.yml
+++ b/auth/src/main/resources/application.yml
@@ -26,3 +26,10 @@ security:
     token:
       secret-key: my_microservices_key
       expire-lenth: 360000
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/registry/eureka/
