--- a/pagamento/src/main/resources/application.yml
+++ b/pagamento/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   application:
-    name: crud
+    name: pagamento
   jpa:
     show-sql: false
     hibernate:
@@ -36,3 +36,10 @@ security:
   jwt:
     token: 
       secret-key: my_microservices_key
+
+eureka:
+  instance:
+    hostname: localhost
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/registry/eureka/
